# Project_mobile-tests

./: README.md  pyproject.toml
tests/: conftest.py
tests/android/: test_wikipedia.py
